Fri May  1 12:19:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/INET_Addr_Test_IPV6.cpp:
          No need for ACE_UNUSED_ARG

        * tests/Map_Manager_Test.cpp:
          Use ACE_TEST_ASSERT and added some more checks

        * tests/test_config.h:
          Removed ghs workaround and check return value of log_msg open
          call

Fri May  1 11:43:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Event_Handler.cpp:
          Initialise members in the ACE_Notification_Buffer constructor

        * ace/Log_Record.h:
          Doxygen fix

        * ace/Notification_Queue.cpp:
          Layout change

        * ace/Select_Reactor_Base.cpp:
          Small code simplification

Fri May  1 09:13:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          opt files are allowed in svn

        * bin/make_release.py:
          Don't generate Pocket PC 2003 and Smartphone 2003 projects

Fri May  1 07:37:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-rpmlintrc.txt:
          Fixed line wrapper

        * rpmbuild/ace-tao.txt:
          Removed, we are not maintaining this file anymore

        * rpmbuild/README:
          Small updates

Fri May  1 07:31:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/*:
          Changed location of config files for suse

Fri May  1 07:15:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/*:
          Extract all archives and put them in subdirectories, makes it much
          easier to update these files

Wed Apr 29 16:30:05  2009  Steve Huston  <shuston@riverace.com>

        * ace/Asynch_Acceptor.cpp (handle_accept): Pass the ACT to accept()
          when restarting the accept. Thanks to Dicky for this fix.

        * THANKS: Added Dicky <qianchendi at gmail dot com>.

Wed Apr 29 13:52:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/Active_Objects/active_objects.mpc